--- a/requirements.txt
+++ b/requirements.txt
@@ -1,24 +1,21 @@
-# FastAPI لتشغيل السيرفر
-fastapi==0.111.1
-uvicorn[standard]==0.23.2
+# Core
+fastapi==0.101.0
+uvicorn==0.23.2
 
-# مكتبات التعامل مع الموديلات
-transformers==4.44.2
+# NLP & AI
+transformers==4.34.0
+torch==2.1.0
 sentence-transformers==2.2.2
-torch==2.2.0
-tensorflow==2.13.1
 
-# مكتبات إدارة الذاكرة وRAG
+# Gradio for chat UI
+gradio==3.45.0
+
+# Utilities
+python-multipart==0.0.6
+pydantic==2.7.0
+numpy==1.24.3
+PyYAML==6.0
+
+# Optional (for vector DB / RAG)
 faiss-cpu==1.7.4
-numpy==1.26.4
-scikit-learn==1.3.2
-pandas==2.1.0
-
-# مكتبات مساعدة
-pyyaml==6.0
-requests==2.32.1
-python-dotenv==1.1.1
-
-# مكتبات أخرى (اختيارية لتوسيع المميزات)
-aiohttp==3.9.5
-pydantic==2.6.2
+scikit-learn==1.3.1
